fixed #wrapper overflow, fixed #4

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -55,6 +55,7 @@
 	position: absolute;
 	max-width: 69%;
         min-width: 69%;
+        overflow-x: hidden;
 	left: 30%;
 	top: 0;
 }
